fix: issue with attachment fix on mobile - safari doesnt support fix property so change to normal scroll behaviour instead parallax

--- a/src/input.css
+++ b/src/input.css
@@ -98,4 +98,9 @@
 			calc(50% - 200px) calc(50% + 100px),
 			calc(50% + 300px) calc(50% + 75px);
 	}
+	@media (max-width: 640px) {
+		.parallax {
+			background-attachment: scroll, scroll, scroll;
+		}
+	}
 }
